--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -15,6 +16,9 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0"
   },
   "engines": {
     "node": "21.6.1"
