--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "test": "vitest"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.0",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "winston": "^3.13.0"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "vitest": "^1.6.0"
+    "vitest": "^3.2.4"
   },
   "engines": {
-    "node": "21.6.1"
+    "node": ">=22.0.0"
   }
 }
