--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,12 @@ OPENAI_API_KEY= YOUR_OPENAI_API_KEY_HERE
 # A comma-separated list of moderator user IDs to ignore (no spaces).
 # These can also be managed via bot commands later.
 # MODERATOR_IDS=12345678,98765432
+
+# ------------------------- #
+# ---- API SETTINGS ------- #
+# ------------------------- #
+
+# The port on which the API server will run
+API_PORT=3000
+
+JWT_SECRET=replace-this-with-a-very-long-random-string
