--- a/package.json
+++ b/package.json
@@ -2,22 +2,30 @@
   "name": "telegram-moderator-bot",
   "version": "1.0.0",
   "description": "An AI-powered Telegram moderator bot.",
-  "main": "src/index.js",
+  "main": "src/bot/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js",
+    "start": "node src/bot/index.js",
+    "start:api": "node src/api/server.js",
+    "dev": "nodemon --config nodemon.json --exec node src/bot/index.js",
+    "dev:api": "nodemon --config nodemon.json --exec node src/api/server.js",
     "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
     "vitest": "^3.2.4"
   },
   "engines": {
