--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,29 @@ TELEGRAM_BOT_TOKEN=TGBOT_TOKEN_HERE
 # The numeric User ID of the bot administrator (you). Commands only work for this user.
 ADMIN_USER_ID= YOUR_USER_ID_HERE
 
+# ------------------------- #
+# --- API SERVER CONFIG --- #
+# ------------------------- #
+
+# API Server Configuration
+API_PORT=3000
+API_BASE_URL=http://localhost:3000
+NODE_ENV=development
+
+# CORS Configuration - Add your domain for production
+ALLOWED_ORIGIN=http://localhost:8080
+
+# Development Server Port
+DEV_SERVER_PORT=8080
+
+# JWT Configuration (optional - auto-generated if not provided)
+JWT_SECRET=your_jwt_secret_here
+
+# Rate Limiting Configuration
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+AUTH_RATE_LIMIT_MAX_REQUESTS=5
+
 # -------------------- #
 # --- AI & NLP API --- #
 # -------------------- #
