--- a/package.json
+++ b/package.json
@@ -7,20 +7,27 @@
   "scripts": {
     "start": "node src/bot/index.js",
     "start:api": "node src/api/server.js",
+    "start:dev-server": "node src/dev-server.js",
     "dev": "nodemon --config nodemon.json --exec node src/bot/index.js",
     "dev:api": "nodemon --config nodemon.json --exec node src/api/server.js",
+    "dev:examples": "nodemon --config nodemon.json --exec node src/dev-server.js",
     "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
