--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,15 @@ API_PORT=3000
 API_BASE_URL=http://localhost:3000
 NODE_ENV=development
 
+# Proxy Configuration (for deployment behind reverse proxies like Vercel, Nginx, etc.)
+# Set to 'true' or '1' in production when behind a proxy
+TRUST_PROXY=false
+
 # CORS Configuration - Add your domain for production
 ALLOWED_ORIGIN=http://localhost:8080
+
+# Additional allowed origins (comma-separated)
+# ADDITIONAL_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
 # Development Server Port
 DEV_SERVER_PORT=8080
@@ -52,12 +59,3 @@ OPENAI_API_KEY= YOUR_OPENAI_API_KEY_HERE
 # A comma-separated list of moderator user IDs to ignore (no spaces).
 # These can also be managed via bot commands later.
 # MODERATOR_IDS=12345678,98765432
-
-# ------------------------- #
-# ---- API SETTINGS ------- #
-# ------------------------- #
-
-# The port on which the API server will run
-API_PORT=3000
-
-JWT_SECRET=replace-this-with-a-very-long-random-string
