--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dev:api": "nodemon --config nodemon.json --exec node src/api/server.js",
     "dev:examples": "nodemon --config nodemon.json --exec node src/dev-server.js",
     "test": "vitest"
+    ,
+    "ngrok": "ngrok http --url=minnow-good-mostly.ngrok-free.app 3000"
   },
   "dependencies": {
     "axios": "^1.10.0",
